feat: complete Harmy'Swing brand integration, FC currency standardization, client review/bespoke order modals, and documentation